--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -173,13 +173,13 @@ WebTraderPage:
   used_funds: "//panda-forex-account-status/div/ul/li[2]/div[1]"
   volume_in_lot: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[1]/div[2]/input"
   sell: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[1]"
-  invest: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[5]/button"
+  invest: "//button[text()='Invest']"
   avaliable_funds_number: "//panda-forex-account-status/div/ul/li[1]/div[2]"
   used_funds_number: "//panda-forex-account-status/div/ul/li[2]/div[2]"
   account_value_number: "//panda-forex-account-status/div/ul/li[3]/div[2]"
   total_p_l_number: "//panda-forex-account-status/div/ul/li[4]/div[2]"
   margin_level_number:  "//panda-forex-account-status/div/ul/li[5]/div[2]"
-  click_buy: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[3]/div[2]"
+  click_buy: "//panda-forex-trading-platform//div[contains(@class,'buy-pandats')]"
   pips_right_panel: "//panda-forex-trading-platform/div/div/div/div[2]/div[1]/div[2]/div/invest/perfect-scrollbar/div/div[1]/form/div[2]/div[2]/div[2]"
   pips_bottom_panel: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/open-trade/td[6]"
   click_stop_loss: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/tabs/div/div/open-trades/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/open-trade/td[9]/button"
