--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -11,11 +11,11 @@ tests_config:
 #    - test_searching_by_columns
 
 ######################################## FILTERS TESTS ###########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
-  class: TestFiltersUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
+#  class: TestFiltersUI
+#  tests:
 #    - test_filter_clients_ui
-    - test_filter_leads_ui
+#    - test_filter_leads_ui
 #    - test_filter_documents_ui
 #    - test_filter_help_desk_ui
 #    - test_filter_ta_ui
@@ -135,3 +135,12 @@ tests_config:
 #    - test_check_workflow_by_status_ui
 #    - test_check_workflow_by_country_ui
 #    - test_delete_workflow_ui
+
+############################################## CAMPAIGN MODULE ########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_campaign_ui.TestCampaignModuleUI
+  class: TestCampaignModuleUI
+  tests:
+    - test_create_campaign_ui
+#    - test_edit_campaign
+#    - test_delete_campaign
+#    - test_campaign_searching_by_columns
