--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -15,16 +15,16 @@ tests_config:
 #  tests:
 #    - test_read_customer_details
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
-#  class: UpdateCustomer
-#  tests:
-#    - test_update_customer
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
+  class: UpdateCustomer
+  tests:
+    - test_update_customer
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
   class: CreateLead
   tests:
     - test_create_lead_api
-#
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
 #  class: ReadLeads
 #  tests:
