--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
-#  class: TestMyDashboardUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
+  class: TestMyDashboardUI
+  tests:
 #    - test_my_dashboard_edit_event_ui
 #    - test_my_dashboard_email_ui
 #    - test_sms_icon
 #    - test_sorting_columns
-#    - test_searching_by_columns
+    - test_searching_by_columns
 
 ######################################## FILTERS TESTS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
@@ -137,10 +137,18 @@ tests_config:
 #    - test_delete_workflow_ui
 
 ############################################## CAMPAIGN MODULE ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_campaign_ui.TestCampaignModuleUI
-  class: TestCampaignModuleUI
-  tests:
-    - test_create_campaign_ui
-#    - test_edit_campaign
-#    - test_delete_campaign
-#    - test_campaign_searching_by_columns
+#- module: src.test.python.ui.automation.implementation.crm.tests_campaign_ui.TestCampaignModuleUI
+#  class: TestCampaignModuleUI
+#  tests:
+#    - test_create_campaign_ui
+#    - test_edit_campaign_ui
+#    - test_delete_campaign_ui
+#    - test_campaign_searching_by_columns_ui
+
+############################################# AUTOASSIGN MODULE ########################################
+#- module: src.test.python.ui.automation.implementation.crm.tests_autoassign_ui.TestAutoAssignModuleUI
+#  class: TestAutoAssignModuleUI
+#  tests:
+#    - test_add_auto_assign_rule_lead_ui
+#    - test_add_auto_assign_rule_client_ui
+#    - test_delete_auto_assign_rule_ui
