--- a/src/test/python/resources/config/Brands/proconsultinginvest.yml
+++ b/src/test/python/resources/config/Brands/proconsultinginvest.yml
@@ -1,6 +1,6 @@
 pretty_name: "ProConsultingInvest"
 url: "https://proconsultinginvest.ptscrm.com/"
-url_ca: "https://www.proconsultinginvest.com/#/"
+url_ca: "https://www.proconsultinginvest.co/#/"
 otp_secret: WDKHWAPYLM35KSCC
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
