--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -1,13 +1,13 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
-  class: TestMyDashboardUI
-  tests:
-    - test_my_dashboard_edit_event_ui
-    - test_sms_icon
-    - test_sorting_columns
-    - test_searching_by_columns
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
+#  class: TestMyDashboardUI
+#  tests:
+#    - test_my_dashboard_edit_event_ui
+#    - test_sms_icon
+#    - test_sorting_columns
+#    - test_searching_by_columns
 
 ######################################## FILTERS TESTS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
