--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -20,15 +20,15 @@ tests_config:
 #    - test_filter_ta_ui
 
 ############################################ LEADS ################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-#  directive: reload_configuration
-#  class: TestLeadsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  directive: reload_configuration
+  class: TestLeadsModuleUI
+  tests:
 #    - test_leads_searching_columns_ui
 #    - test_leads_sorting_columns_ui
-#    - test_mass_assign_leads_ui
+    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
-#    - test_edit_lead_ui
+    - test_edit_lead_ui
 #    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
@@ -95,10 +95,10 @@ tests_config:
 #    - test_fin_transactions_searching_columns_ui
 
 ############################################## AUDIT LOGS ###########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
-  class: TestAuditLogsModuleUI
-  tests:
-    - test_audit_logs_searching_columns_ui
+#- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_ui.TestAuditLogsModuleUI
+#  class: TestAuditLogsModuleUI
+#  tests:
+#    - test_audit_logs_searching_columns_ui
 #    - test_new_events_shown_in_audit_logs_ui
 
 ################################################# TASKS #############################################
