--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -220,7 +220,7 @@ tests_config:
 #  class: HelpDeskModuleTest
 #  tests:
 #    - test_create_ticket
-#
+
 #- module: src.test.python.ui.automation.implementation.crm.tests_help_desk_module.Test_Tab_Help_Desk
 #  class: TabHelpDeskTest
 #  tests:
@@ -228,11 +228,11 @@ tests_config:
 #    - test_check_tab_help_desk
 
 ############################################# AUDIT LOGS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
-  class: AuditLogsModuleTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_audit_logs_module.Test_Audit_Logs
+#  class: AuditLogsModuleTest
+#  tests:
 #    - test_audit_logs_searching_by_columns
-    - test_new_events_shown_in_audit_logs
+#    - test_new_events_shown_in_audit_logs
 
 ############################################# GLOBAL SEARCH ################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Global_Search
