--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,8 +2,8 @@
 
 brands:
 
-#- name: analystq
-#  config_file: analystq.yml
+- name: analystq
+  config_file: analystq.yml
 
 #- name: any1profit
 #  config_file: any1profit.yml
@@ -62,8 +62,8 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
