--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -1,13 +1,13 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
-#  class: TestMyDashboardUI
-#  tests:
-#    - test_my_dashboard_edit_event_ui
-#    - test_sms_icon
-#    - test_sorting_columns
-#    - test_searching_by_columns
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_ui.TestMyDashboardUI
+  class: TestMyDashboardUI
+  tests:
+    - test_my_dashboard_edit_event_ui
+    - test_sms_icon
+    - test_sorting_columns
+    - test_searching_by_columns
 
 ######################################## FILTERS TESTS ###########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
@@ -20,26 +20,26 @@ tests_config:
 #    - test_filter_ta_ui
 
 ############################################ LEADS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-  directive: reload_configuration
-  class: TestLeadsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+#  directive: reload_configuration
+#  class: TestLeadsModuleUI
+#  tests:
 #    - test_leads_searching_columns_ui
 #    - test_leads_sorting_columns_ui
-    - test_mass_assign_leads_ui
-    - test_mass_edit_leads_ui
+#    - test_mass_assign_leads_ui
+#    - test_mass_edit_leads_ui
 #    - test_edit_lead_ui
 #    - test_edit_pencil_lead_ui
 #    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ########################################### CLIENTS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
-  class: TestClientsModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientsModuleUI
+#  class: TestClientsModuleUI
+#  tests:
 #    - test_clients_searching_columns_ui
 #    - test_clients_sorting_columns_ui
-    - test_mass_assign_clients_ui
-    - test_mass_edit_clients_ui
+#    - test_mass_assign_clients_ui
+#    - test_mass_edit_clients_ui
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
 #  class: TestClientDetailsUI
@@ -102,15 +102,15 @@ tests_config:
 #    - test_new_events_shown_in_audit_logs_ui
 
 ################################################# TASKS #############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
-  class: TestTasksModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
+#  class: TestTasksModuleUI
+#  tests:
 #    - test_tasks_searching_columns_ui
 #    - test_tasks_sorting_columns_ui
 #    - test_add_event_ui
 #    - test_edit_event_ui
 #    - test_delete_event_ui
-    - test_tasks_mass_edit
+#    - test_tasks_mass_edit
 #    - test_tasks_email_ui
 
 ############################################# USER MANAGEMENT #######################################
