--- a/src/test/python/resources/config/Brands/tradixa.yml
+++ b/src/test/python/resources/config/Brands/tradixa.yml
@@ -1,6 +1,6 @@
 pretty_name: "Tradixa"
 url: "https://tradixa.ptscrm.com/"
-url_ca: "https://tradixa.co/"
+url_ca: "https://www.tradi-xa.com/#/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
 number_live_acc: "81875137"
