--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -1,27 +1,27 @@
 tests_config:
 
 ######################################### CA TESTS ##############################################
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
 #    - test_check_login
 #    - test_client_deposit_page_loading
 #    - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
-#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-#  class: AddNewAccountTestCA
-#  tests:
-#    - test_add_live_account_ca
-#    - test_add_demo_account_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+  class: AddNewAccountTestCA
+  tests:
+    - test_add_live_account_ca
+    - test_add_demo_account_ca
 #    - test_verify_accounts_in_crm
 #    - test_switch_between_accounts_ca
 #
-#- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
-#  class: TestPagesCA
-#  tests:
-#    - test_main_menu_pages_loading
+- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
+  class: TestPagesCA
+  tests:
+    - test_main_menu_pages_loading
 #    - test_graphs_loading
 #
 - module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
